--- a/ploneconf2015/theme/static/less/components/talks.less
+++ b/ploneconf2015/theme/static/less/components/talks.less
@@ -42,7 +42,12 @@
     height: auto;
   }  
 }  
+
 .speaker-details {   
   overflow: auto;
 } 
+
+.input-box.is_focused {
+    background-color: #eee;
+}
 
